fixed the project cards spacing

--- a/itsharsh_site/_sass/main.scss
+++ b/itsharsh_site/_sass/main.scss
@@ -221,8 +221,8 @@ a {
 
 .projects-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 2rem;
+    grid-template-columns: 1fr;
+    gap: 0.5 rem;
     margin-top: 2rem;
 }
 
